[package]
name = "alist_rs"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
thiserror = "1.0.64"

[dev-dependencies]
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
