[package]
name = "alist_rs"
version = "0.0.2"
edition = "2021"
description = "A Rust client library for interacting with the Alist API."
author = ["SsrCoder<SsrCoder@gmail.com>"]
license = "MIT"
repository = "https://github.com/SsrCoder/alist_rs"
documentation = "https://docs.rs/alist_rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
thiserror = "1.0.64"

[dev-dependencies]
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
